Pelada funcionando correctamente

--- a/Barberia/Barberia/Components/Pages/Home.razor
+++ b/Barberia/Barberia/Components/Pages/Home.razor
@@ -5,3 +5,6 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<a href="/IndexPelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>IN</a>
+<a href="/CreatePelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CR</a>
