--- a/Barberia/Barberia/Components/_Imports.razor
+++ b/Barberia/Barberia/Components/_Imports.razor
@@ -10,6 +10,9 @@
 @using Barberia
 @using Barberia.Client
 @using Barberia.Components
+@using Radzen
+@using Radzen.Blazor
 @using Library;
 @using Microsoft.EntityFrameworkCore;
 @using System.ComponentModel.DataAnnotations;
+@using Barberia.Services
