Barbero terminado y funcionando correcto

--- a/Barberia/Barberia/Components/Pages/Barbero/CreateBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/CreateBarbero.razor
@@ -13,7 +13,7 @@
 <EditForm Model="@barbero" OnValidSubmit="Guardar" FormName="barbero">
     <DataAnnotationsValidator />
 
-    <a href="/" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i></a>
+    <a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i></a>
     <section class="vh-100 gradient-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center">
@@ -46,7 +46,7 @@
 
                             <div class="d-flex justify-content-center mt-3">
                                 <button type="submit" class="w-20 btn btn-lg btn-success"><i class="bi bi-floppy"></i> Agregar</button>
-                                <a href="/" class="w-20 btn btn-lg btn-danger ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
+                                <a href="/" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
                             </div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                 };
             notificationServices.Notify(Mensaje1);
             await Task.Delay(1000);
-            navigationManager.NavigateTo("/IndexPelada");
+            navigationManager.NavigateTo("/");
         }
         else
         {
