--- a/Barberia/Barberia/Components/Pages/Barbero/IndexBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/IndexBarbero.razor
@@ -16,7 +16,7 @@
             <div class="fondo " style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
-                    <h2 class="fw-bold mb-2 text-uppercase">Peladas</h2>
+                    <h1 class="fw-bold mb-2 text-uppercase">Barberos</h1>
 
                     <div class="tab-content">
                         <form>
@@ -56,9 +56,8 @@
                                                 <td>@barbero.Direccion</td>
                                                 <td>
                                                     <div>
-                                                        <a href="/EditPelada/@barbero.BarberoId" class="btn btn-outline-primary"><i class="bi bi-pencil-square" /> Edit</a>
-                                                        <a href="/ViewCompra/@barbero.BarberoId" class="btn btn-outline-primary"><i class="bi bi-eyes" /> View</a>
-                                                        <a href="/DeleteCompra/@barbero.BarberoId" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</a>
+                                                        <a href="/EditBarbero/@barbero.BarberoId" class="btn btn-outline-primary"><i class="bi bi-pencil-square" /> Edit</a>
+                                                        <a href="/DeleteBarbero/@barbero.BarberoId" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</a>
                                                     </div>
                                                 </td>
                                             </tr>
