--- a/Barberia/Barberia/Components/Pages/Home.razor
+++ b/Barberia/Barberia/Components/Pages/Home.razor
@@ -8,3 +8,5 @@ Welcome to your new app.
 
 <a href="/IndexPelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>IN</a>
 <a href="/CreatePelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CR</a>
+<a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INB</a>
+<a href="/CreateBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CRB</a>
