--- a/Barberia/Barberia/Components/Pages/Peladas/CreatePelada.razor
+++ b/Barberia/Barberia/Components/Pages/Peladas/CreatePelada.razor
@@ -13,8 +13,9 @@
 <EditForm Model="@peladas" OnValidSubmit="Guardar" FormName="peladas">
     <DataAnnotationsValidator />
 
+    <a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
     <section class="vh-100 gradient-custom">
-        <div class="container py-5 h-100">
+        <div class="container py-5 ">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="fondo col-lg-3 col-xl-4" style="border-radius: 5rem;">
 
