--- a/Barberia/Barberia/Components/Pages/Barbero/DeleteBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/DeleteBarbero.razor
@@ -6,7 +6,9 @@
 @inject NavigationManager navigationManager
 @inject IJSRuntime JSRuntime
 
-<a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i></a>
+<PageTitle>Barbero</PageTitle>
+
+<a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center">
@@ -16,16 +18,15 @@
                     <h2 class="fw-bold mb-2 text-uppercase text-center">Eliminar barberos</h2>
 
                     <div class="row tab-content ">
-
                         <li><strong>Nombre:</strong> @barbero.BarberoName</li>
                         <li><strong>Celular:</strong> @barbero.Celular</li>
-                        <li><strong>Direcci&oacute;n:</strong> @barbero.Direccion</li>
+                        <li><strong>Dirección:</strong> @barbero.Direccion</li>
                     </div>
 
                     <div class="d-flex justify-content-center mt-3">
                         <td>
                             <div>
-                                <a @onclick="() => ConfirmarEliminar(barbero.BarberoId)" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</a>
+                                <button @onclick="() => ConfirmarEliminar(barbero.BarberoId)" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</button>
                             </div>
                         </td>
                     </div>
@@ -36,13 +37,32 @@
     </div>
 </section>
 
-
+@if (Confirmacion)
+{
+    <div class="modal fade show" id="confirmarModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: block;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Confirmar eliminación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick=Close></button>
+                </div>
+                <div class="modal-body">
+                    ¿Está seguro de que desea eliminar este barbero?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" @onclick=Close>Cancelar</button>
+                    <button type="button" class="btn btn-danger" @onclick=@(async () => await Eliminar(Id))>Eliminar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @code {
     [Parameter]
     public int Id { get; set; }
     public Barbero barbero = new Barbero();
-
+    public bool Confirmacion = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -50,6 +70,11 @@
         {
             barbero = await barberosServices.GetBarbero(Id);
         }
+    }
+
+    private void Close()
+    {
+        Confirmacion = false;
     }
 
     private async Task Eliminar(int id)
@@ -69,11 +94,6 @@
 
     private async Task ConfirmarEliminar(int id)
     {
-        bool confirmacion = await JSRuntime.InvokeAsync<bool>("confirmar", "¿Está seguro de que desea eliminar este barbero?");
-        if (confirmacion)
-        {
-            await Eliminar(id);
-        }
+        Confirmacion = true;
     }
-
 }
