--- a/Barberia/Barberia/Components/Pages/Home.razor
+++ b/Barberia/Barberia/Components/Pages/Home.razor
@@ -10,3 +10,4 @@ Welcome to your new app.
 <a href="/CreatePelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CR</a>
 <a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INB</a>
 <a href="/CreateBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CRB</a>
+<a href="/IndexFactura" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INF</a>
