--- a/Barberia/Barberia/Components/Pages/Peladas/EditPelada.razor
+++ b/Barberia/Barberia/Components/Pages/Peladas/EditPelada.razor
@@ -12,6 +12,7 @@
 <EditForm Model="peladas" OnValidSubmit="Guardar" FormName="peladas">
     <DataAnnotationsValidator />
 
+    <a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
     <section class="vh-100 gradient-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
