--- a/Barberia/Barberia/Components/Pages/Peladas/IndexPelada.razor
+++ b/Barberia/Barberia/Components/Pages/Peladas/IndexPelada.razor
@@ -9,7 +9,7 @@
 <PageTitle>Peladas</PageTitle>
 <RadzenNotification />
 
-<a href="/" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i></a>
+<a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
