--- a/Barberia/Barberia/Components/_Imports.razor
+++ b/Barberia/Barberia/Components/_Imports.razor
@@ -16,3 +16,5 @@
 @using Microsoft.EntityFrameworkCore;
 @using System.ComponentModel.DataAnnotations;
 @using Barberia.Services
+@using Blazored.Modal
+@using Blazored.Modal.Services
