VistaFactura funcinando de maravilla

--- a/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
@@ -59,7 +59,7 @@
                                                 <td>@factura.Fecha</td>
                                                 <td>@factura.Name</td>
                                                 <td>@factura.FormaDePago</td>
-                                                <td>@factura.Pagado.ToString("N2")</td>
+                                                <td>@factura.Total.ToString("N2")</td>
                                                 <td>
                                                     <div>
                                                         <a href="/EditBarbero/@factura.FacturaId" class="btn btn-outline-primary"><i class="bi bi-pencil-square" /> Edit</a>
