--- a/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
@@ -34,6 +34,6 @@
 
     private void NavigateToPelada(int peladaId)
     {
-        NavigationManager.NavigateTo($"/FacturaPelada/{peladaId}");
+        NavigationManager.NavigateTo($"/CreateFactura/{peladaId}");
     }
 }
