--- a/Barberia/Barberia/Components/Pages/Home.razor
+++ b/Barberia/Barberia/Components/Pages/Home.razor
@@ -11,3 +11,5 @@ Welcome to your new app.
 <a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INB</a>
 <a href="/CreateBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CRB</a>
 <a href="/IndexFactura" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INF</a>
+<a href="/MenuFactura" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>MF</a>
+<a href="/MenuCobrar" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>MC</a>
