--- a/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
@@ -3,8 +3,9 @@
 @rendermode InteractiveServer
 @inject PeladasServices peladasServices
 
-<h1 class="fw-bold mb-2 text-uppercase text-center">Barberia X</h1>
+<a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 
+<h1 class="fw-bold mb-2 text-uppercase text-center">Barberia X</h1>
 <div class="row">
     <section class="gradient-custom">
         <div class="container py-5 h-100">
