--- a/Barberia/Barberia/Components/Pages/Factura/VistaFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/VistaFactura.razor
@@ -7,6 +7,7 @@
 @inject BarberoServices barberosServices
 @inject NavigationManager navigationManager
 @inject IJSRuntime JSRuntime
+<RadzenNotification />
 
 <section class="gradient-custom">
     <div class="container py-5 h-100">
@@ -54,10 +55,10 @@
                     </div>
 
                     <div class="d-flex justify-content-center mt-3">
-                        <a href="/" class="w-20 btn btn-lg btn-success ms-3"><i class="bi bi-arrow-left"></i> Pagar</a>
+                        <a href="/" class="w-20 btn btn-lg btn-success ms-3"><i class="bi bi-cash"></i> Pagar</a>
                         <td>
                             <div>
-                                <button @onclick="() => ConfirmarEliminar(factura.FacturaId)" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</button>
+                                <button @onclick="() => ConfirmarEliminar(factura.FacturaId)" class="btn btn-lg btn-danger"><i class="bi bi-trash-fill" /> Eliminar</button>
                             </div>
                         </td>
                     </div>
