--- a/Barberia/Barberia/Components/Pages/Home.razor
+++ b/Barberia/Barberia/Components/Pages/Home.razor
@@ -2,9 +2,18 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="fw-bold mb-2 text-uppercase text-center">Bienvenido a Barberia X</h1>
+<div class="text-center">
+    Inicia sesi&oacute;n para manejar tu barberia
 
-Welcome to your new app.
+    <div class="nav-item px-3 ">
+        <NavLink class="btn btn-lg btn-primary " href="Account/Login">
+            <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
+        </NavLink>
+    </div>
+
+</div>
+
 
 <a href="/IndexPelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>IN</a>
 <a href="/CreatePelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CR</a>
