Colocacion de autorizaciones

--- a/Barberia/Barberia/Components/Pages/Barbero/IndexBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/IndexBarbero.razor
@@ -2,6 +2,7 @@
 @inject NotificationService notificationServices
 @inject BarberoServices BarberoServices
 @inject NavigationManager navigationManager
+@attribute [Authorize(Roles = "Admin")]
 
 @rendermode InteractiveServer
 
