--- a/Barberia/Barberia/Components/Pages/Cobrar/MenuCobrar.razor
+++ b/Barberia/Barberia/Components/Pages/Cobrar/MenuCobrar.razor
@@ -3,6 +3,7 @@
 @inject BarberoServices BarberoServices
 @inject FacturaServices facturaServices
 @inject NavigationManager navigationManager
+@attribute [Authorize(Roles = "Admin")]
 
 @rendermode InteractiveServer
 
