--- a/Barberia/Barberia/Components/Pages/Peladas/CreatePelada.razor
+++ b/Barberia/Barberia/Components/Pages/Peladas/CreatePelada.razor
@@ -5,6 +5,7 @@
 @inject PeladasServices peladasServices
 @inject NavigationManager navigationManager
 @inject IJSRuntime JSRuntime
+@attribute [Authorize(Roles = "Admin")]
 
 
 <PageTitle>Peladas</PageTitle>
