--- a/Barberia/Barberia/Components/Pages/Barbero/DeleteBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/DeleteBarbero.razor
@@ -5,6 +5,7 @@
 @inject BarberoServices barberosServices
 @inject NavigationManager navigationManager
 @inject IJSRuntime JSRuntime
+@attribute [Authorize(Roles = "Admin")]
 
 <PageTitle>Barbero</PageTitle>
 
