--- a/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
@@ -2,6 +2,7 @@
 @inject NotificationService notificationServices
 @inject FacturaServices FacturaServices
 @inject NavigationManager navigationManager
+@attribute [Authorize(Roles = "Admin")]
 
 @rendermode InteractiveServer
 
