--- a/Barberia/Barberia/Components/Pages/Factura/ViewFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/ViewFactura.razor
@@ -7,6 +7,7 @@
 @inject BarberoServices barberosServices
 @inject NavigationManager navigationManager
 @inject IJSRuntime JSRuntime
+@attribute [Authorize(Roles = "Admin")]
 
 <section class="gradient-custom">
     <div class="container py-5 h-100">
