--- a/Barberia/Barberia/Components/Pages/Factura/VistaFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/VistaFactura.razor
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="d-flex justify-content-center mt-3">
-                        <a href="/" class="w-20 btn btn-lg btn-success ms-3"><i class="bi bi-cash"></i> Pagar</a>
+                        <a href="/MenuFactura" class="w-20 btn btn-lg btn-success ms-3"><i class="bi bi-cash"></i> Pagar</a>
                         <td>
                             <div>
                                 <button @onclick="() => ConfirmarEliminar(factura.FacturaId)" class="btn btn-lg btn-danger"><i class="bi bi-trash-fill" /> Eliminar</button>
