--- a/Barberia/Barberia/Components/Pages/Barbero/IndexBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/IndexBarbero.razor
@@ -10,7 +10,7 @@
 <PageTitle>Barbero</PageTitle>
 <RadzenNotification />
 
-<a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
