--- a/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
+++ b/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
@@ -12,7 +12,7 @@
 <PageTitle>Cobrar</PageTitle>
 <RadzenNotification />
 
-<a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/MenuCobrar" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class="gradient-custom">
     <div class="container py-5">
         <div class="row d-flex justify-content-center align-items-center">
