--- a/Barberia/Barberia/Components/Pages/Peladas/EditPelada.razor
+++ b/Barberia/Barberia/Components/Pages/Peladas/EditPelada.razor
@@ -13,7 +13,7 @@
 <EditForm Model="peladas" OnValidSubmit="Guardar" FormName="peladas">
     <DataAnnotationsValidator />
 
-    <a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+    <a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
     <section class="vh-100 gradient-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -40,7 +40,7 @@
 
                             <div>
                                 <button type="submit" class="w-20 btn btn-lg btn-success"><i class="bi bi-floppy"></i> Aceptar</button>
-                                <a href="/" class="w-20 btn btn-lg btn-primary"><i class="bi bi-arrow-left"></i> Volver</a>
+                                <a href="/MenuAdmin" class="w-20 btn btn-lg btn-primary"><i class="bi bi-arrow-left"></i> Volver</a>
                             </div>
                         </div>
                     </div>
