--- a/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
@@ -10,7 +10,7 @@
 <PageTitle>factura</PageTitle>
 <RadzenNotification />
 
-<a href="/" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
@@ -35,7 +35,6 @@
                                         <th>Cliente</th>
                                         <th>Forma de pago</th>
                                         <th>Monto pagado</th>
-                                        <th>Acciones</th>
                                     </tr>
                                 </thead>
 
@@ -58,12 +57,6 @@
                                                 <td>@item.Name</td>
                                                 <td>@item.FormaDePago</td>
                                                 <td>@item.Total.ToString("N2")</td>
-                                                <td>
-                                                    <div>
-                                                        <a href="/EditBarbero/@item.FacturaId" class="btn btn-outline-primary"><i class="bi bi-pencil-square" /> Edit</a>
-                                                        <a href="/DeleteBarbero/@item.FacturaId" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</a>
-                                                    </div>
-                                                </td>
                                             </tr>
                                         }
 
