--- a/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
@@ -3,6 +3,7 @@
 @rendermode InteractiveServer
 @inject PeladasServices peladasServices
 @attribute [Authorize(Roles = "Admin")]
+<PageTitle>Inicio</PageTitle>
 
 <h1 class="fw-bold mb-2 text-uppercase text-center">Barberia X</h1>
 <div class="row">
