--- a/Barberia/Barberia/Components/Pages/Home.razor
+++ b/Barberia/Barberia/Components/Pages/Home.razor
@@ -1,24 +1,18 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+<div class="row vh-100 align-items-center justify-content-center">
+    <div class="text-center">
+        <h1 class="fw-bold mb-2 text-uppercase text-center">Bienvenido a Barberia X</h1>
+        Inicia sesi&oacute;n para manejar tu barberia
 
-<h1 class="fw-bold mb-2 text-uppercase text-center">Bienvenido a Barberia X</h1>
-<div class="text-center">
-    Inicia sesi&oacute;n para manejar tu barberia
+        <div class="nav-item px-3 ">
+            <NavLink class="btn btn-lg btn-primary " href="Account/Login">
+                <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
 
-    <div class="nav-item px-3 ">
-        <NavLink class="btn btn-lg btn-primary " href="Account/Login">
-            <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
-        </NavLink>
     </div>
 
+
 </div>
-
-
-<a href="/IndexPelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>IN</a>
-<a href="/CreatePelada" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CR</a>
-<a href="/IndexBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INB</a>
-<a href="/CreateBarbero" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>CRB</a>
-<a href="/IndexFactura" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>INF</a>
-<a href="/MenuFactura" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>MF</a>
-<a href="/MenuCobrar" class="w-20 btn btn-lg btn-outline-primary"><i class="bi bi-arrow-left"></i>MC</a>
