Modificacion en crear y creacion de la clase compra

--- a/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
+++ b/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
@@ -58,7 +58,7 @@
                             <div class="text-center">
                                 <h4 class="row fw-bold mb-2">Sumatoria del Total: @cobrar.Total</h4>
                                 <h4 class="row fw-bold mb-2">Descuento: @cobrar.Comision</h4>
-                                <h4 class="row fw-bold mb-2">Total a cobrar: @cobrar.MontoCobrar.ToString("N2")</h4>
+                                <h4 class="row fw-bold mb-2">Total a pagar: @cobrar.MontoCobrar.ToString("N2")</h4>
                                 <button type="button" class="btn btn-primary" @onclick=@(async () => await Guardar())>Cobrar</button>
                             </div>
                         </form>
@@ -89,7 +89,7 @@
         factura = (await facturaServices.GetFacturasPorBarbero(barbero.BarberoName)).ToList();
         cobrar.Total = factura.Sum(f => f.Total);
         cobrar.Comision = 0.30f;
-        cobrar.MontoCobrar = cobrar.Total * cobrar.Comision;
+        cobrar.MontoCobrar = cobrar.Total * 0.70f;
     }
 
     public async Task Guardar()
